<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, MCAdminActivity!</string>
    <string name="app_name">MCAdmin</string>
    <string name="host">host</string>
    <string name="port">port</string>
    <string name="user">user</string>
    <string name="login">Login</string>
    <string name="host_hint">1.2.3.4</string>
    <string name="port_hint">25575</string>
    <string name="foobar">Foobar</string>
    <string name="send">send</string>
    <string name="password">password</string>
    <string name="ban">ban</string>
    <string name="kick">kick</string>
    <string name="unban">unban</string>
    <string name="pardon">pardon</string>
    <string name="ban_ip">ban-ip</string>
    <string name="pardon_ip">pardon-ip</string>
    <string name="op">op</string>
    <string name="deop">deop</string>
    <string name="teleport">tp</string>
    <string name="creative">creative</string>
    <string name="survival">survival</string>
    <string name="select_player">Please select a player.</string>
    <string name="placeholder">...</string>
    <string name="kicksword">kicksword</string>
    <string name="angle">angle</string>
    <string name="add">add</string>
    <string name="drag_drop_teleport">easy tp</string>

</resources>